grammar.js
    source_file: $ => optional($._statements),

    _statements: $ => seq(
      repeat($._terminator),
      $.statement,
      repeat(seq($._terminator, optional($.statement))),
    ),

    // Body block used inside class/module/method/etc definitions
    _body: $ => seq(
      $._terminator,
      optional($._statements),
    ),

    _terminator: $ => choice('\n', ';'),

    // =========================================================================
    // REQUIRE / INCLUDE / EXTEND
    // =========================================================================
    require_statement: $ => seq('require', $.string_literal),

    include_statement: $ => seq('include', $.type),

    extend_statement: $ => seq('extend', $.type),

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================
    assignment: $ => prec.right(PREC.ASSIGN, seq(
      $.assignment_target,
      '=',
      $.expression,
    )),

    assignment_target: $ => choice(
      $.identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.index_expression,
      $.dot_expression,
    ),

    multiple_assignment: $ => prec.right(PREC.ASSIGN, seq(
      $.assignment_target,
      ',',
      commaSep1($.assignment_target),
      '=',
      commaSep1($.expression),
    )),

    // =========================================================================
    // BINARY EXPRESSIONS
    // =========================================================================
    binary_expression: $ => {
      const table = [
        [PREC.OR, '||'],
        [PREC.AND, '&&'],
        [PREC.COMPARE, choice('==', '!=', '<', '>', '<=', '>=', '<=>', '===', '=~', '!~')],
        [PREC.BIT_OR, '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADD, choice('+', '-', '&+', '&-')],
        [PREC.MULTIPLY, choice('*', '/', '//', '%', '&*')],
        [PREC.POWER, choice('**', '&**')],
      ];

      return choice(
        ...table.map(([prec_val, op]) =>
          prec.left(/** @type {number} */ (prec_val), seq(
            field('left', $.expression),
            field('operator', /** @type {any} */ (op)),
            field('right', $.expression),
          ))
        ),
      );
    },

    unary_expression: $ => prec(PREC.UNARY, choice(
      seq('-', $.expression),
      seq('+', $.expression),
      seq('~', $.expression),
      seq('!', $.expression),
    )),

    conditional_expression: $ => prec.right(PREC.CONDITIONAL, seq(
      field('condition', $.expression),
      '?',
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    call: $ => prec.left(PREC.CALL, choice(
      // method(args)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list),
        optional($.block),
      ),
      // method args (no parens)
      seq(
        field('method', $._method_name),
        field('arguments', $.argument_list_no_parens),
        optional($.block),
      ),
      // method { block }
      seq(
        field('method', $._method_name),
        $.block,
      ),
    )),

    dot_expression: $ => prec.left(PREC.DOT, seq(
      field('receiver', $.expression),
      choice('.', '&.'),
      field('method', choice($._method_name, $.constant)),
      optional(field('arguments', $.argument_list)),
      optional($.block),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.argument),
      ')',
    ),

    argument_list_no_parens: $ => prec.left(-1, seq(
      $.argument,
      repeat(seq(',', $.argument)),
    )),

    argument: $ => choice(
      $.expression,
      $.named_argument,
      $.splat_argument,
      $.double_splat_argument,
      $.block_argument,
      $.out_argument,
    ),

    block_argument: $ => choice(
      seq('&', $.expression),
      $.short_block,
    ),

    short_block: $ => seq(
      '&.',
      field('method', $._method_name),
      optional(field('arguments', $.argument_list)),
    ),

    // =========================================================================
    // BLOCKS
    // =========================================================================
    block: $ => choice(
      seq(
        'do',
        optional($.block_params),
        optional($._statements),
        'end',
      ),
      seq(
        '{',
        optional($.block_params),
        optional($._statements),
        '}',
      ),
    ),

    block_params: $ => seq(
      '|',
      commaSep1($.block_param),
      '|',
    ),

    block_param: $ => seq(
      $.identifier,
      optional(seq(':', $.type)),
    ),

    // =========================================================================
    // CONTROL FLOW
    // =========================================================================
    if_expression: $ => seq(
      'if',
      field('condition', $.expression),
      $.then_block,
      repeat($.elsif_clause),
      optional($.else_clause),
      'end',
    ),

    unless_expression: $ => seq(
      'unless',
      field('condition', $.expression),
      $.then_block,
      optional($.else_clause),
      'end',
    ),

    then_block: $ => choice(
      seq('then', optional($._statements)),
      seq($._terminator, optional($._statements)),
    ),

    elsif_clause: $ => seq(
      'elsif',
      field('condition', $.expression),
      $.then_block,
    ),

    else_clause: $ => seq(
      'else',
      optional($._statements),
    ),

    case_expression: $ => seq(
      'case',
      optional(field('value', $.expression)),
      $._terminator,
      repeat1($.when_clause),
      optional($.else_clause),
      'end',
    ),

    when_clause: $ => seq(
      'when',
      commaSep1($.when_value),
      $.then_block,
    ),

    when_value: $ => choice(
      $.expression,
      seq('.', $._method_name),  // implicit enum member or method
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $.expression),
      $.then_block,
      'end',
    ),

    until_expression: $ => seq(
      'until',
      field('condition', $.expression),
      $.then_block,
      'end',
    ),

    // Modifiers
    modifier_if: $ => prec.left(-2, seq($.expression, 'if', $.expression)),
    modifier_unless: $ => prec.left(-2, seq($.expression, 'unless', $.expression)),
    modifier_rescue: $ => prec.left(-2, seq($.expression, 'rescue', $.expression)),

    // =========================================================================
    // EXCEPTION HANDLING
    // =========================================================================
    begin_expression: $ => seq(
      'begin',
      optional($._statements),
      repeat($.rescue_clause),
      optional($.else_clause),
      optional($.ensure_clause),
      'end',
    ),

    rescue_clause: $ => seq(
      'rescue',
      optional($.rescue_param),
      $.then_block,
    ),

    rescue_param: $ => choice(
      seq($.identifier, ':', commaSep1($.type)),
      commaSep1($.type),
      $.identifier,
    ),

    ensure_clause: $ => seq(
      'ensure',
      optional($._statements),
    ),

    // =========================================================================
    // RETURN, BREAK, NEXT, RAISE, YIELD
    // =========================================================================
    return_statement: $ => prec.left(seq('return', optional($.expression))),

    break_statement: $ => prec.left(seq('break', optional($.expression))),

    next_statement: $ => prec.left(seq('next', optional($.expression))),

    raise_statement: $ => prec.left(seq('raise', $.expression)),

    class_def: $ => seq(
      optional('abstract'),
      'class',
      field('name', $.type_name),
      optional(seq('<', field('superclass', $.type))),
      optional($._body),
      'end',
    ),

    struct_def: $ => seq(
      optional('abstract'),
      'struct',
      field('name', $.type_name),
      optional(seq('<', field('superclass', $.type))),
      optional($._body),
      'end',
    ),

    module_def: $ => seq(
      'module',
      field('name', $.type_name),
      optional($._body),
      'end',
    ),

    enum_def: $ => seq(
      'enum',
      field('name', $._type_identifier),
      optional(seq(':', field('base_type', $.type))),
      $._terminator,
      repeat(choice($.enum_member, $.method_def, $._terminator)),
      'end',
    ),

    enum_member: $ => seq(
      $.constant,
      optional(seq('=', $.expression)),
    ),

    annotation_def: $ => seq(
      'annotation',
      field('name', $.constant),
      $._terminator,
      'end',
    ),

    // =========================================================================
    // METHOD DEFINITIONS
    // =========================================================================
    method_def: $ => seq(
      'def',
      choice(
        field('name', $._def_name),
        seq('self', '.', field('name', $._def_name)),
      ),
      optional($.method_params),
      optional(seq(':', field('return_type', $.type))),
      optional(seq('forall', commaSep1($.constant))),
      optional($._body),
      'end',
    ),

    _def_name: $ => choice(
      $._method_name,
      $.setter_method_name,
      $.operator_method_def,
    ),

    abstract_def: $ => prec.left(seq(
      'abstract',
      'def',
      choice(
        field('name', $._def_name),
        seq('self', '.', field('name', $._def_name)),
      ),
      optional($.method_params),
      optional(seq(':', field('return_type', $.type))),
    )),

    annotation: $ => seq(
      '@[',
      $._annotation_name,
      optional($.argument_list),
      ']',
    ),

    _annotation_name: $ => choice(
      $.constant,
      seq($.constant, '::', $._annotation_name),
    ),

    // =========================================================================
    // VISIBILITY
    // =========================================================================
    lib_def: $ => seq(
      'lib',
      field('name', $.constant),
      $._terminator,
      repeat(choice(
        $.fun_def,
        $.c_struct_def,
        $.union_def,
        $.type_def,
        $.enum_def,
        $.alias_statement,
        $.lib_var_decl,
        $._terminator,
      )),
      'end',
    ),

    fun_def: $ => choice(
      // Declaration only (no body)
      seq(
        'fun',
        field('name', $.identifier),
        optional(seq('=', field('real_name', $.string_literal))),
        optional($.fun_params),
        optional(seq(':', field('return_type', $.type))),
      ),
      // With body
      seq(
        'fun',
        field('name', $.identifier),
        optional(seq('=', field('real_name', $.string_literal))),
        optional($.fun_params),
        optional(seq(':', field('return_type', $.type))),
        $._terminator,
        optional($._statements),
        'end',
      ),
    ),

    fun_params: $ => seq(
      '(',
      commaSep($.fun_param),
      ')',
    ),

    fun_param: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type),
    ),

    type_def: $ => seq(
      'type',
      field('name', $.constant),
      '=',
      field('type', $.type),
    ),

    // =========================================================================
    // TYPES
    // =========================================================================
    type: $ => choice(
      $.constant,
      $.generic_type,
      $.union_type,
      $.nilable_type,
      $.pointer_type,
      $.static_array_type,
      $.proc_type,
      $.tuple_type,
      $.named_tuple_type,
      $.self_type,
      $.typeof_type,
      $.underscore_type,
      $.scoped_type,
    ),

    // Type name used in class/module/struct definitions — allows Foo, Foo(T), Foo::Bar, Foo::Bar(T)
    type_name: $ => prec(1, choice(
      $.constant,
      $.generic_type_def,
      $.scoped_type_name,
    )),

    // Scoped type name for definitions: Foo::Bar, Foo::Bar::Baz, Foo::Bar(T)
    _type_identifier: $ => choice(
      $.constant,
      $.scoped_type_name,
    ),

    generic_type_def: $ => prec(2, seq(
      $.constant,
      '(',
      commaSep1($.constant),
      ')',
    )),

    pointer_type: $ => prec(2, seq($.type, '*')),

    scoped_type: $ => prec(3, seq(choice($.constant, $.scoped_constant), '::', $.type)),

    // =========================================================================
    // ALIAS
    // =========================================================================
    type_declaration: $ => prec.right(PREC.ASSIGN, seq(
      field('name', choice($.identifier, $.instance_variable, $.class_variable)),
      ':',
      field('type', $.type),
      optional(seq('=', field('value', $.expression))),
    )),

    // =========================================================================
    // SPECIAL EXPRESSIONS
    // =========================================================================
    uninitialized_expression: $ => seq('uninitialized', $.type),

    primary: $ => choice(
      $.literal,
      $.identifier,
      $.method_identifier,
      $.instance_variable,
      $.class_variable,
      $.global_variable,
      $.constant,
      $.scoped_constant,
      $.generic_instance,
      $.parenthesized_expression,
      $.self,
      $.proc_literal,
    ),

    // Scoped constant access: Foo::Bar, Foo::Bar::Baz
    generic_instance: $ => prec(PREC.CALL, seq(
      choice($.constant, $.scoped_constant),
      '(',
      commaSep1($.type),
      ')',
    )),

    parenthesized_expression: $ => seq('(', $.expression, ')'),
    self: $ => 'self',

    // =========================================================================
    // METHOD NAMES
    // =========================================================================
    // Method name: identifier or identifier with ? or ! suffix
    _method_name: $ => choice($.identifier, $.method_identifier),

    // Methods with ? or ! suffix: empty?, valid?, save!
    nil_literal: $ => 'nil',

    bool_literal: $ => choice('true', 'false'),

    integer_literal: $ => token(choice(
      // Decimal with optional type suffix (i8, i16, i32, i64, i128, u8, u16, u32, u64, u128)
      seq(optional('-'), /[0-9][0-9_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Hex
      seq(optional('-'), /0x[0-9a-fA-F][0-9a-fA-F_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Octal
      seq(optional('-'), /0o[0-7][0-7_]*/, optional(/[iu](8|16|32|64|128)/)),
      // Binary
      seq(optional('-'), /0b[01][01_]*/, optional(/[iu](8|16|32|64|128)/)),
    )),

    float_literal: $ => token(seq(
      optional('-'),
      /[0-9][0-9_]*/,
      choice(
        seq('.', /[0-9][0-9_]*/),
        seq('.', /[0-9][0-9_]*/, /[eE][+-]?[0-9]+/),
        /[eE][+-]?[0-9]+/,
      ),
      optional(choice('f32', 'f64')),
    )),

    char_literal: $ => seq(
      "'",
      choice(
        /[^'\\]/,  // single char
        $.char_escape_sequence,
      ),
      "'",
    ),

    string_literal: $ => seq(
      $._string_start,
      repeat(choice(
        $.string_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._string_end,
    ),

    regex_literal: $ => seq(
      $._regex_start,
      repeat(choice(
        $.regex_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      $._regex_end,
      optional($.regex_flags),
    ),

    regex_flags: $ => token.immediate(/[imx]+/),

    // Command literal with interpolation
    array_literal: $ => seq(
      '[',
      commaSep($.expression),
      optional(','),
      ']',
      optional(seq('of', $.type)),
    ),

    hash_entry: $ => seq(
      field('key', $.expression),
      '=>',
      field('value', $.expression),
    ),

    proc_literal: $ => prec(1, seq(
      '->',
      optional($.proc_literal_params),
      $.block,
    )),
