test/corpus/c_bindings.txt
================================================================================
Lib definition with fun
================================================================================

lib LibC
  fun puts(str : UInt8*) : Int32
end

--------------------------------------------------------------------------------

(source_file
  (lib_def
    name: (constant)
    (fun_def
      name: (identifier)
      (fun_params
        (fun_param
          name: (identifier)
          type: (type
            (pointer_type
              (type
                (constant))))))
      return_type: (type
        (constant)))))

================================================================================
Empty lib definition
================================================================================

lib LibFoo
end

--------------------------------------------------------------------------------

(source_file
  (lib_def
    name: (constant)))

================================================================================
Fun without parameters
================================================================================

lib LibC
  fun getpid : Int32
end

--------------------------------------------------------------------------------

(source_file
  (lib_def
    name: (constant)
    (fun_def
      name: (identifier)
      return_type: (type
        (constant)))))

================================================================================
Type def in lib
================================================================================

lib LibC
  type SizeT = UInt64
end

--------------------------------------------------------------------------------

(source_file
  (lib_def
    name: (constant)
    (type_def
      name: (constant)
      type: (type
        (constant)))))
