test/corpus/classes.txt
================================================================================
Simple class
================================================================================

class Foo
end

--------------------------------------------------------------------------------

(source_file
  (class_def
    name: (type_name
      (constant))))

================================================================================
Class with superclass
================================================================================

class Dog < Animal
end

--------------------------------------------------------------------------------

(source_file
  (class_def
    name: (type_name
      (constant))
    superclass: (type
      (constant))))

================================================================================
Generic class
================================================================================

class Container(T)
end

--------------------------------------------------------------------------------

(source_file
  (class_def
    name: (type_name
      (generic_type_def
        (constant)
        (constant)))))

================================================================================
Module definition
================================================================================

module Printable
end

--------------------------------------------------------------------------------

(source_file
  (module_def
    name: (type_name
      (constant))))

================================================================================
Enum definition
================================================================================

enum Color
  Red
  Green
  Blue
end

--------------------------------------------------------------------------------

(source_file
  (enum_def
    name: (constant)
    (enum_member
      (constant))
    (enum_member
      (constant))
    (enum_member
      (constant))))

================================================================================
Enum with base type and values
================================================================================

enum Signal : Int32
  HUP = 1
  INT = 2
end

--------------------------------------------------------------------------------

(source_file
  (enum_def
    name: (constant)
    base_type: (type
      (constant))
    (enum_member
      (constant)
      (primary
        (integer_literal)))
    (enum_member
      (constant)
      (primary
        (integer_literal)))))
