test/corpus/classes_extended.txt
================================================================================
Struct definition
================================================================================

struct Point
  @x : Int32
  @y : Int32
end

--------------------------------------------------------------------------------

(source_file
  (struct_def
    name: (type_name
      (constant))
    (type_declaration
      name: (instance_variable)
      type: (type
        (constant)))
    (type_declaration
      name: (instance_variable)
      type: (type
        (constant)))))

================================================================================
Include statement
================================================================================

include Enumerable

--------------------------------------------------------------------------------

(source_file
  (include_statement
    (type
      (constant))))

================================================================================
Extend statement
================================================================================

extend ClassMethods

--------------------------------------------------------------------------------

(source_file
  (extend_statement
    (type
      (constant))))

================================================================================
Annotation definition
================================================================================

annotation MyAnnotation
end

--------------------------------------------------------------------------------

(source_file
  (annotation_def
    name: (constant)))

================================================================================
Self keyword
================================================================================

self

--------------------------------------------------------------------------------

(source_file
  (primary
    (self)))

================================================================================
Char literal
================================================================================

'a'

--------------------------------------------------------------------------------

(source_file
  (primary
    (char_literal)))

================================================================================
Self method definition
================================================================================

def self.create
  42
end

--------------------------------------------------------------------------------

(source_file
  (method_def
    name: (identifier)
    (primary
      (integer_literal))))
