test/corpus/control_flow_extended.txt
================================================================================
Break statement
================================================================================

while true
  break
end

--------------------------------------------------------------------------------

(source_file
  (while_expression
    condition: (primary
      (bool_literal))
    (then_block
      (break_statement))))

================================================================================
Next statement
================================================================================

while true
  next
end

--------------------------------------------------------------------------------

(source_file
  (while_expression
    condition: (primary
      (bool_literal))
    (then_block
      (next_statement))))

================================================================================
Raise statement
================================================================================

raise "error"

--------------------------------------------------------------------------------

(source_file
  (raise_statement
    (primary
      (string_literal
        (string_content)))))

================================================================================
Modifier unless
================================================================================

x = 1 unless done

--------------------------------------------------------------------------------

(source_file
  (modifier_unless
    (assignment
      (assignment_target
        (identifier))
      (primary
        (integer_literal)))
    (primary
      (identifier))))

================================================================================
Modifier rescue
================================================================================

x = risky rescue default_value

--------------------------------------------------------------------------------

(source_file
  (modifier_rescue
    (assignment
      (assignment_target
        (identifier))
      (primary
        (identifier)))
    (primary
      (identifier))))

================================================================================
Return without value
================================================================================

def foo
  return
end

--------------------------------------------------------------------------------

(source_file
  (method_def
    name: (identifier)
    (return_statement)))

================================================================================
Break with value
================================================================================

while true
  break 42
end

--------------------------------------------------------------------------------

(source_file
  (while_expression
    condition: (primary
      (bool_literal))
    (then_block
      (break_statement
        (primary
          (integer_literal))))))

================================================================================
Next with value
================================================================================

while true
  next 0
end

--------------------------------------------------------------------------------

(source_file
  (while_expression
    condition: (primary
      (bool_literal))
    (then_block
      (next_statement
        (primary
          (integer_literal))))))
